Update in cdata tagging and TaggerProxy